wrapup notes for notebook 09

--- a/09-EDA-Task.ipynb
+++ b/09-EDA-Task.ipynb
@@ -565,6 +565,348 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <th>bedrooms_per_room</th>\n",
+       "      <th>population_per_household</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>longitude</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.924664</td>\n",
+       "      <td>-0.108197</td>\n",
+       "      <td>0.044568</td>\n",
+       "      <td>0.069608</td>\n",
+       "      <td>0.099773</td>\n",
+       "      <td>0.055310</td>\n",
+       "      <td>-0.015176</td>\n",
+       "      <td>-0.045967</td>\n",
+       "      <td>-0.027540</td>\n",
+       "      <td>0.092657</td>\n",
+       "      <td>0.002476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>latitude</th>\n",
+       "      <td>-0.924664</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.011173</td>\n",
+       "      <td>-0.036100</td>\n",
+       "      <td>-0.066983</td>\n",
+       "      <td>-0.108785</td>\n",
+       "      <td>-0.071035</td>\n",
+       "      <td>-0.079809</td>\n",
+       "      <td>-0.144160</td>\n",
+       "      <td>0.106389</td>\n",
+       "      <td>-0.113815</td>\n",
+       "      <td>0.002366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <td>-0.108197</td>\n",
+       "      <td>0.011173</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.361262</td>\n",
+       "      <td>-0.320451</td>\n",
+       "      <td>-0.296244</td>\n",
+       "      <td>-0.302916</td>\n",
+       "      <td>-0.119034</td>\n",
+       "      <td>0.105623</td>\n",
+       "      <td>-0.153277</td>\n",
+       "      <td>0.136089</td>\n",
+       "      <td>0.013191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rooms</th>\n",
+       "      <td>0.044568</td>\n",
+       "      <td>-0.036100</td>\n",
+       "      <td>-0.361262</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.930380</td>\n",
+       "      <td>0.857126</td>\n",
+       "      <td>0.918484</td>\n",
+       "      <td>0.198050</td>\n",
+       "      <td>0.134153</td>\n",
+       "      <td>0.133798</td>\n",
+       "      <td>-0.187900</td>\n",
+       "      <td>-0.024581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <td>0.069608</td>\n",
+       "      <td>-0.066983</td>\n",
+       "      <td>-0.320451</td>\n",
+       "      <td>0.930380</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.877747</td>\n",
+       "      <td>0.979728</td>\n",
+       "      <td>-0.007723</td>\n",
+       "      <td>0.049686</td>\n",
+       "      <td>0.001538</td>\n",
+       "      <td>0.084238</td>\n",
+       "      <td>-0.028355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>population</th>\n",
+       "      <td>0.099773</td>\n",
+       "      <td>-0.108785</td>\n",
+       "      <td>-0.296244</td>\n",
+       "      <td>0.857126</td>\n",
+       "      <td>0.877747</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.907222</td>\n",
+       "      <td>0.004834</td>\n",
+       "      <td>-0.024650</td>\n",
+       "      <td>-0.072213</td>\n",
+       "      <td>0.035319</td>\n",
+       "      <td>0.069863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>households</th>\n",
+       "      <td>0.055310</td>\n",
+       "      <td>-0.071035</td>\n",
+       "      <td>-0.302916</td>\n",
+       "      <td>0.918484</td>\n",
+       "      <td>0.979728</td>\n",
+       "      <td>0.907222</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.013033</td>\n",
+       "      <td>0.065843</td>\n",
+       "      <td>-0.080598</td>\n",
+       "      <td>0.065087</td>\n",
+       "      <td>-0.027309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_income</th>\n",
+       "      <td>-0.015176</td>\n",
+       "      <td>-0.079809</td>\n",
+       "      <td>-0.119034</td>\n",
+       "      <td>0.198050</td>\n",
+       "      <td>-0.007723</td>\n",
+       "      <td>0.004834</td>\n",
+       "      <td>0.013033</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.688075</td>\n",
+       "      <td>0.326895</td>\n",
+       "      <td>-0.615661</td>\n",
+       "      <td>0.018766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_house_value</th>\n",
+       "      <td>-0.045967</td>\n",
+       "      <td>-0.144160</td>\n",
+       "      <td>0.105623</td>\n",
+       "      <td>0.134153</td>\n",
+       "      <td>0.049686</td>\n",
+       "      <td>-0.024650</td>\n",
+       "      <td>0.065843</td>\n",
+       "      <td>0.688075</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.151948</td>\n",
+       "      <td>-0.255880</td>\n",
+       "      <td>-0.023737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <td>-0.027540</td>\n",
+       "      <td>0.106389</td>\n",
+       "      <td>-0.153277</td>\n",
+       "      <td>0.133798</td>\n",
+       "      <td>0.001538</td>\n",
+       "      <td>-0.072213</td>\n",
+       "      <td>-0.080598</td>\n",
+       "      <td>0.326895</td>\n",
+       "      <td>0.151948</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.416952</td>\n",
+       "      <td>-0.004852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bedrooms_per_room</th>\n",
+       "      <td>0.092657</td>\n",
+       "      <td>-0.113815</td>\n",
+       "      <td>0.136089</td>\n",
+       "      <td>-0.187900</td>\n",
+       "      <td>0.084238</td>\n",
+       "      <td>0.035319</td>\n",
+       "      <td>0.065087</td>\n",
+       "      <td>-0.615661</td>\n",
+       "      <td>-0.255880</td>\n",
+       "      <td>-0.416952</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.002938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>population_per_household</th>\n",
+       "      <td>0.002476</td>\n",
+       "      <td>0.002366</td>\n",
+       "      <td>0.013191</td>\n",
+       "      <td>-0.024581</td>\n",
+       "      <td>-0.028355</td>\n",
+       "      <td>0.069863</td>\n",
+       "      <td>-0.027309</td>\n",
+       "      <td>0.018766</td>\n",
+       "      <td>-0.023737</td>\n",
+       "      <td>-0.004852</td>\n",
+       "      <td>0.002938</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          longitude  latitude  housing_median_age  \\\n",
+       "longitude                  1.000000 -0.924664           -0.108197   \n",
+       "latitude                  -0.924664  1.000000            0.011173   \n",
+       "housing_median_age        -0.108197  0.011173            1.000000   \n",
+       "total_rooms                0.044568 -0.036100           -0.361262   \n",
+       "total_bedrooms             0.069608 -0.066983           -0.320451   \n",
+       "population                 0.099773 -0.108785           -0.296244   \n",
+       "households                 0.055310 -0.071035           -0.302916   \n",
+       "median_income             -0.015176 -0.079809           -0.119034   \n",
+       "median_house_value        -0.045967 -0.144160            0.105623   \n",
+       "rooms_per_household       -0.027540  0.106389           -0.153277   \n",
+       "bedrooms_per_room          0.092657 -0.113815            0.136089   \n",
+       "population_per_household   0.002476  0.002366            0.013191   \n",
+       "\n",
+       "                          total_rooms  total_bedrooms  population  households  \\\n",
+       "longitude                    0.044568        0.069608    0.099773    0.055310   \n",
+       "latitude                    -0.036100       -0.066983   -0.108785   -0.071035   \n",
+       "housing_median_age          -0.361262       -0.320451   -0.296244   -0.302916   \n",
+       "total_rooms                  1.000000        0.930380    0.857126    0.918484   \n",
+       "total_bedrooms               0.930380        1.000000    0.877747    0.979728   \n",
+       "population                   0.857126        0.877747    1.000000    0.907222   \n",
+       "households                   0.918484        0.979728    0.907222    1.000000   \n",
+       "median_income                0.198050       -0.007723    0.004834    0.013033   \n",
+       "median_house_value           0.134153        0.049686   -0.024650    0.065843   \n",
+       "rooms_per_household          0.133798        0.001538   -0.072213   -0.080598   \n",
+       "bedrooms_per_room           -0.187900        0.084238    0.035319    0.065087   \n",
+       "population_per_household    -0.024581       -0.028355    0.069863   -0.027309   \n",
+       "\n",
+       "                          median_income  median_house_value  \\\n",
+       "longitude                     -0.015176           -0.045967   \n",
+       "latitude                      -0.079809           -0.144160   \n",
+       "housing_median_age            -0.119034            0.105623   \n",
+       "total_rooms                    0.198050            0.134153   \n",
+       "total_bedrooms                -0.007723            0.049686   \n",
+       "population                     0.004834           -0.024650   \n",
+       "households                     0.013033            0.065843   \n",
+       "median_income                  1.000000            0.688075   \n",
+       "median_house_value             0.688075            1.000000   \n",
+       "rooms_per_household            0.326895            0.151948   \n",
+       "bedrooms_per_room             -0.615661           -0.255880   \n",
+       "population_per_household       0.018766           -0.023737   \n",
+       "\n",
+       "                          rooms_per_household  bedrooms_per_room  \\\n",
+       "longitude                           -0.027540           0.092657   \n",
+       "latitude                             0.106389          -0.113815   \n",
+       "housing_median_age                  -0.153277           0.136089   \n",
+       "total_rooms                          0.133798          -0.187900   \n",
+       "total_bedrooms                       0.001538           0.084238   \n",
+       "population                          -0.072213           0.035319   \n",
+       "households                          -0.080598           0.065087   \n",
+       "median_income                        0.326895          -0.615661   \n",
+       "median_house_value                   0.151948          -0.255880   \n",
+       "rooms_per_household                  1.000000          -0.416952   \n",
+       "bedrooms_per_room                   -0.416952           1.000000   \n",
+       "population_per_household            -0.004852           0.002938   \n",
+       "\n",
+       "                          population_per_household  \n",
+       "longitude                                 0.002476  \n",
+       "latitude                                  0.002366  \n",
+       "housing_median_age                        0.013191  \n",
+       "total_rooms                              -0.024581  \n",
+       "total_bedrooms                           -0.028355  \n",
+       "population                                0.069863  \n",
+       "households                               -0.027309  \n",
+       "median_income                             0.018766  \n",
+       "median_house_value                       -0.023737  \n",
+       "rooms_per_household                      -0.004852  \n",
+       "bedrooms_per_room                         0.002938  \n",
+       "population_per_household                  1.000000  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correlation matrix\n",
+    "## note: diagonal correlation = 1\n",
+    "corr = df.corr()\n",
+    "\n",
+    "corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "longitude                  -0.045967\n",
+       "latitude                   -0.144160\n",
+       "housing_median_age          0.105623\n",
+       "total_rooms                 0.134153\n",
+       "total_bedrooms              0.049686\n",
+       "population                 -0.024650\n",
+       "households                  0.065843\n",
+       "median_income               0.688075\n",
+       "median_house_value          1.000000\n",
+       "rooms_per_household         0.151948\n",
+       "bedrooms_per_room          -0.255880\n",
+       "population_per_household   -0.023737\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr['median_house_value']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
