updating notebook 10 with class notes

--- a/12-EDA-Example.ipynb
+++ b/12-EDA-Example.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring the Data: Part II \n",
+    "# Exploring the Data Challenge\n",
     "\n",
-    "Today, we will compare two quantities and determine some basic models for making inferences based on these relationships.  We have the following goals for todays session:\n",
-    "\n",
-    "- [Check in on EDA Routines and Strategies](#Customer Churn)\n",
-    "- Discuss Linear Regression and Examine its use in Python\n",
-    "- Search for relationships between variables in our data\n",
-    "- Investigate metrics for the quality of fit of Linear Regression Models\n",
-    "- Use Multi-Variate Regression to explore data\n",
-    "- Investigate transformations to Linearize certain distributions\n",
-    "- NumPy, LOESS and smoothing"
+    "Today, we will work to explore a new dataset using our earlier EDA strategies.  We will also discuss presentation graphics, and customizations with matplotlib.  To begin, let's explore the Custome Churn dataset.\n"
    ]
   },
   {
@@ -22,8 +14,7 @@
    "metadata": {},
    "source": [
     "### Customer Churn\n",
-    "\n",
-    "Let's revisit the customer churn dataset and how we might use an exploratory routine to investigate customer churn from our earlier notebook."
+    "\n"
    ]
   },
   {
@@ -943,6 +934,74 @@
     "telecom[['Total day minutes', 'Total intl calls']].plot(kind='density', subplots=True, \n",
     "                  layout=(1, 2), sharex=False, figsize=(12, 4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "1. Hypothesize some additional questions to consider in your EDA.\n",
+    "2. Use Pandas to explore your questions.\n",
+    "3. Generate additional questions while conducting analysis.\n",
+    "4. What kinds of things do you believe are surfaced in terms of factors leading to customer churn?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
