--- a/projects/ames.ipynb
+++ b/projects/ames.ipynb
@@ -921,6 +921,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### incorporate grid search into model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Clean up data by dropping or imputing missing values\n",
+    "2. Code categorical features\n",
+    "3. Split data into train and test set using `train_test_split`\n",
+    "3. Select a few features you believe important and evaluate a `DummyRegressor`\n",
+    "4. Compare the performance of your dummy to that of a standard `LinearRegression` model.\n",
+    "5. Build a model using `PolynomialFeatures` together with the `GridSearchCV`.  \n",
+    "6. Discuss the performance of each in terms of RMSE."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the training and testing set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create empty pipeline\n",
+    "pipe = make_pipeline(PolynomialFeatures(), LinearRegression())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters for the pipeline\n",
+    "degrees = {'polynomialfeatures__degree': [i for i in range(1, 10)]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup grid search\n",
+    "grid = GridSearchCV(pipe, param_grid=degrees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=Pipeline(memory=None,\n",
+       "     steps=[('polynomialfeatures', PolynomialFeatures(degree=2, include_bias=True, interaction_only=False)), ('linearregression', LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False))]),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'polynomialfeatures__degree': [1, 2, 3, 4, 5, 6, 7, 8, 9]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('polynomialfeatures', PolynomialFeatures(degree=3, include_bias=True, interaction_only=False)), ('linearregression', LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False))])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best = grid.best_estimator_\n",
+    "best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MSE is 1143545969.969 and RMSE is 33816.357\n"
+     ]
+    }
+   ],
+   "source": [
+    "best.fit(X_train, y_train)\n",
+    "y_best = best.predict(X_test)\n",
+    "\n",
+    "mse_best = mean_squared_error(y_best,y_test)\n",
+    "rmse_best = np.sqrt(mse_best)\n",
+    "\n",
+    "print(\"The MSE is {:.3f} and RMSE is {:.3f}\".format(mse_best,rmse_best))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
