--- a/11-03-Beautiful-Soup-Scraping.ipynb
+++ b/11-03-Beautiful-Soup-Scraping.ipynb
@@ -439,10 +439,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key = 'kZFSwW1kezEqG8a1rP79BEbus'\n",
-    "consumer_secret = '8vMwEDPji62FqCVmgkqjZ0FtYWJeVhmWOfLXFMlEUFoewKqhhz'\n",
-    "access_token = '4922450361-27KxaE3Oy6G3jSbXMtIetPBZiVUIWtgGFj83OyE'\n",
-    "access_token_secret = 'u6T9vRox2ozs33uMvjBsGVP5nK1FKBJzbIx2I6kjil2Lf'"
+    "#auth info\n",
+    "import twitter_credentials as Tw\n",
+    "importlib.reload(Tw)"
    ]
   },
   {
@@ -453,8 +452,8 @@
    "source": [
     "import tweepy\n",
     "\n",
-    "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
-    "auth.set_access_token(access_token, access_token_secret)\n",
+    "auth = tweepy.OAuthHandler(Tw.consumer_key, Tw.consumer_secret)\n",
+    "auth.set_access_token(Tw.access_token, Tw.access_token_secret)\n",
     "\n",
     "api = tweepy.API(auth)"
    ]
