--- a/14-ensemble-intro.ipynb
+++ b/14-ensemble-intro.ipynb
@@ -8,45 +8,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both of these classifiers use collections of other classifiers to arrive at a more accurate decision. `RandomForestClassifier` runs multiple decisiontrees and aggregates their results. `VotingClassifier` uses multiple classifiers and keeps the answer that comes up with the highest frequency."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# both of these use collections of classifiers\n",
     "from sklearn.ensemble import RandomForestClassifier, VotingClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "rf_clf = RandomForestClassifier()\n",
-    "lg_clf = LogisticRegression()"
+    "lg_clf = LogisticRegression()\n",
+    "knn = KNeighborsClassifier()\n",
+    "tree_clf = DecisionTreeClassifier()\n",
+    "mn_clf = MultinomialNB()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voting_clf = VotingClassifier(estimators = [('rf', rf_clf), ('lr',lg_clf)], voting = 'hard')"
+    "voting_clf = VotingClassifier(estimators = [('rf', rf_clf), ('lr',lg_clf), ('knn', knn), ('tree', tree_clf), ('multi', mn_clf)], voting = 'hard')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +116,11 @@
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_we...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False))],\n",
+       "            min_we...           splitter='best')), ('multi', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
        "         flatten_transform=None, n_jobs=1, voting='hard', weights=None)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,23 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.95\n",
-      "Accuracy: 1.00\n",
-      "Accuracy: 0.95\n"
+      "Accuracy: 0.92\n",
+      "Accuracy: 0.92\n",
+      "Accuracy: 0.97\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "/Users/karenhao/Documents/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
       "  if diff:\n"
      ]
     }
